
name:                react-native-hs
version:             0.1.1
license:             MIT
license-file:        LICENSE
author:              Jyri-Matti Lähteenmäki
maintainer:          jyri-matti@lahteenmaki.net
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.9 && <5.0,
                       text,
                       transformers,
                       time,
                       deepseq,
                       react-hs,
                       aeson,
                       containers,
                       network-uri
  exposed-modules:  React.Flux.Rn.Components.ActivityIndicator,
                    React.Flux.Rn.Components.Button,
                    React.Flux.Rn.Components.DatePickerIOS,
                    React.Flux.Rn.Components.DrawerLayoutAndroid,
                    React.Flux.Rn.Components.FlatList,
                    React.Flux.Rn.Components.Image,
                    React.Flux.Rn.Components.KeyboardAvoidingView,
                    React.Flux.Rn.Components.ListView,
                    React.Flux.Rn.Components.MaskedViewIOS,
                    React.Flux.Rn.Components.Modal,
                    React.Flux.Rn.Components.NavigatorIOS,
                    React.Flux.Rn.Components.Picker,
                    React.Flux.Rn.Components.PickerIOS,
                    React.Flux.Rn.Components.ProgressBarAndroid,
                    React.Flux.Rn.Components.ProgressViewIOS,
                    React.Flux.Rn.Components.RefreshControl,
                    React.Flux.Rn.Components.SafeAreaView,
                    React.Flux.Rn.Components.ScrollView,
                    React.Flux.Rn.Components.SectionList,
                    React.Flux.Rn.Components.SegmentedControlIOS,
                    React.Flux.Rn.Components.Slider,
                    React.Flux.Rn.Components.SnapshotViewIOS,
                    React.Flux.Rn.Components.StatusBar,
                    React.Flux.Rn.Components.Switch,
                    React.Flux.Rn.Components.TabBarIOS_Item,
                    React.Flux.Rn.Components.TabBarIOS,
                    React.Flux.Rn.Components.Text
                    React.Flux.Rn.Components.TextInput,
                    React.Flux.Rn.Components.ToolbarAndroid,
                    React.Flux.Rn.Components.TouchableHighlight,
                    React.Flux.Rn.Components.TouchableNativeFeedback,
                    React.Flux.Rn.Components.TouchableOpacity,
                    React.Flux.Rn.Components.TouchableWithoutFeedback,
                    React.Flux.Rn.Components.View,
                    React.Flux.Rn.Components.ViewPagerAndroid,
                    React.Flux.Rn.Components.VirtualizedList,
                    React.Flux.Rn.Components.WebView,
                    React.Flux.Rn.Props.CommonProps,
                    React.Flux.Rn.Props.ScrollViewProps,
                    React.Flux.Rn.Props.TouchableWithoutFeedbackProps,
                    React.Flux.Rn.Props.ViewProps,
                    React.Flux.Rn.Props.VirtualizedListProps,
                    React.Flux.Rn.StyleProps.ImageStyleProps,
                    React.Flux.Rn.StyleProps.LayoutStyleProps,
                    React.Flux.Rn.StyleProps.ShadowStyleProps,
                    React.Flux.Rn.StyleProps.TextStyleProps,
                    React.Flux.Rn.StyleProps.TransformsStyleProps,
                    React.Flux.Rn.StyleProps.ViewStyleProps,
                    React.Flux.Rn.Types.AccessibilityComponentTypes,
                    React.Flux.Rn.Types.AccessibilityTraits,
                    React.Flux.Rn.Types.Action,
                    React.Flux.Rn.Types.AlignContent,
                    React.Flux.Rn.Types.AlignSelf,
                    React.Flux.Rn.Types.BarStyle,
                    React.Flux.Rn.Types.Color,
                    React.Flux.Rn.Types.ContentInsetAdjustmentBehavior,
                    React.Flux.Rn.Types.ContentOffset,
                    React.Flux.Rn.Types.ContentSize,
                    React.Flux.Rn.Types.DataDetectorTypes,
                    React.Flux.Rn.Types.DecelerationRate,
                    React.Flux.Rn.Types.FontStyle,
                    React.Flux.Rn.Types.ImageSource,
                    React.Flux.Rn.Types.Inset,
                    React.Flux.Rn.Types.JustifyContent,
                    React.Flux.Rn.Types.KeyboardDismissMode,
                    React.Flux.Rn.Types.KeyboardShouldPersistTaps,
                    React.Flux.Rn.Types.KeyboardType,
                    React.Flux.Rn.Types.Length,
                    React.Flux.Rn.Types.Method,
                    React.Flux.Rn.Types.OnLayout,
                    React.Flux.Rn.Types.OnScroll,
                    React.Flux.Rn.Types.OnSelectionChange,
                    React.Flux.Rn.Types.OverScrollMode,
                    React.Flux.Rn.Types.PointerEvents,
                    React.Flux.Rn.Types.ReturnKeyType,
                    React.Flux.Rn.Types.Route,
                    React.Flux.Rn.Types.Size,
                    React.Flux.Rn.Types.TextAlignVertical,
                    React.Flux.Rn.Types.TextBreakStrategy,
                    React.Flux.Rn.Types.TvParallaxProperties,
                    React.Flux.Rn.Types.Visibility,
                    React.Flux.Rn.Types.WritingDirection,
                    React.Flux.Rn.APIs,
                    React.Flux.Rn.App,
                    React.Flux.Rn.Events,
                    React.Flux.Rn.Properties,
                    React.Flux.Rn.Types,
                    React.Flux.Rn.Util,
                    React.Flux.Rn.Views
  if impl(ghcjs)
      build-depends: ghcjs-base
  else
      build-depends: ghcjs-base-stub
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W
  extensions: NoImplicitPrelude
--  cpp-options: -DGHCJS_BROWSER

